--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalability=yes">
     <link rel="stylesheet" href="style.css">
-    <title>Maths Website</title>
+    <title>BRILLIANT MINDS</title>
 </head>
 
 <body>
@@ -35,7 +35,10 @@
         </div>
         <div id="introBox">
             <h2>Achieve Academic Success with Us</h2>
-            <p>Welcome to our education website! Here you will find a wealth of resources to help you excel in your studies and advance your learning. Our website contains materials to support teachers, students, and parents in their educational pursuits, from elementary to high school. We strive to provide valuable resources to help you achieve academic success.</p>
+            <p>Welcome to our education website! Here you will find a wealth of resources to help you excel in your
+                studies and advance your learning. Our website contains materials to support teachers, students, and
+                parents in their educational pursuits, from elementary to high school. We strive to provide valuable
+                resources to help you achieve academic success.</p>
         </div>
         <div class="sidebar">
             <div id="leftsidebar" class="stylesidebar">
