--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
             </div>
         </div>
         <div id="menu">
-            <ul>
-                <li><a href="#" class="actived">Home</a></li>
-                <li><a href="#">Online Tutorials</a></li>
-                <li><a href="#">Get a Private Tutor</a></li>
-                <li><a href="#">Sign Up</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
+            <a href="#" class="actived">Home</a>
+            <a href="#">Online Tutorials</a>
+            <a href="#">Get a Private Tutor</a>
+            <a href="#">Sign Up</a>
+            <a href="#">Contact Us</a>
         </div>
         <div id="introBox">
             <h2>Achieve Academic Success with Us</h2>
@@ -41,29 +39,33 @@
                 resources to help you achieve academic success.</p>
         </div>
         <div class="sidebar">
-            <div id="leftsidebar" class="stylesidebar">
-                <h3>Go To:-</h3>
-                <ul>
-                    <li><a href="#">Physics</a></li>
-                    <li><a href="#">Chemistry</a></li>
-                    <li><a href="#">Biology</a></li>
-                    <li><a href="#">Maths</a></li>
-                    <li><a href="#">Computer Science</a></li>
-                </ul>
+            <div class="sidebarWrapper">
+                <div id="leftsidebar" class="stylesidebar">
+                    <h3>Go To:-</h3>
+                    <ul>
+                        <li><a href="#">Physics</a></li>
+                        <li><a href="#">Chemistry</a></li>
+                        <li><a href="#">Biology</a></li>
+                        <li><a href="#">Maths</a></li>
+                        <li><a href="#">Computer Science</a></li>
+                    </ul>
+                </div>
             </div>
-            <div id="rightsidebar" class="stylesidebar">
-                <h3>Why Us?</h3>
-                <ul>
-                    <li><a href="#">Experienced, highly qualified instructors</a></li>
-                    <li><a href="#">Affordable tuition rates and payment plans</a></li>
-                    <li><a href="#">Flexible class schedules to fit any lifestyle</a></li>
-                    <li><a href="#">Comprehensive curriculum to meet your needs</a></li>
-                    <li><a href="#">Small class sizes for personalized attention</a></li>
-                    <li><a href="#">Opportunities for hands-on learning and collaboration</a></li>
-                    <li><a href="#">Convenient online and in-person options</a></li>
-                    <li><a href="#">Supportive and friendly learning environment</a></li>
-                    <li><a href="#">Up to date curriculum and resources</a></li>
-                </ul>
+            <div class="sidebarWrapper">
+                <div id="rightsidebar" class="stylesidebar">
+                    <h3>Why Us?</h3>
+                    <ul>
+                        <li><a href="#">Experienced, highly qualified instructors</a></li>
+                        <li><a href="#">Affordable tuition rates and payment plans</a></li>
+                        <li><a href="#">Flexible class schedules to fit any lifestyle</a></li>
+                        <li><a href="#">Comprehensive curriculum to meet your needs</a></li>
+                        <li><a href="#">Small class sizes for personalized attention</a></li>
+                        <li><a href="#">Opportunities for hands-on learning and collaboration</a></li>
+                        <li><a href="#">Convenient online and in-person options</a></li>
+                        <li><a href="#">Supportive and friendly learning environment</a></li>
+                        <li><a href="#">Up to date curriculum and resources</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="clear"></div>
